--- a/misc_analysis/get_eth_balance.ipynb
+++ b/misc_analysis/get_eth_balance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'../helper_functions'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,21 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x6887246668a3b87F54DeB3b94Ba47a6f63F32985\n",
-      "CTC From: 0x6887246668a3b87F54DeB3b94Ba47a6f63F32985: 61.14725821205291 ETH\n",
-      "0x473300df21D047806A082244b417f96b32f13A33\n",
-      "SCC From: 0x473300df21D047806A082244b417f96b32f13A33: 39.568072872971584 ETH\n",
-      "0x5E4e65926BA27467555EB562121fac00D24E9dD2\n",
-      "CTC To: 0x5E4e65926BA27467555EB562121fac00D24E9dD2: 0.0 ETH\n",
-      "0xBe5dAb4A2e9cd0F27300dB4aB94BeE3A233AEB19\n",
-      "SCC To: 0xBe5dAb4A2e9cd0F27300dB4aB94BeE3A233AEB19: 0.0 ETH\n"
+      "CTC From: 0x6887246668a3b87F54DeB3b94Ba47a6f63F32985: 178.67293997398852 ETH\n",
+      "SCC From: 0x473300df21D047806A082244b417f96b32f13A33: 166.67671133933575 ETH\n"
      ]
     }
    ],
@@ -63,15 +57,14 @@
     "addresses = [\n",
     "     ['CTC From', '0x6887246668a3b87F54DeB3b94Ba47a6f63F32985']\n",
     "    ,['SCC From', '0x473300df21D047806A082244b417f96b32f13A33']\n",
-    "    ,['CTC To', '0x5E4e65926BA27467555EB562121fac00D24E9dD2']\n",
-    "    ,['SCC To', '0xBe5dAb4A2e9cd0F27300dB4aB94BeE3A233AEB19']\n",
+    "#     ,['CTC To', '0x5E4e65926BA27467555EB562121fac00D24E9dD2']\n",
+    "#     ,['SCC To', '0xBe5dAb4A2e9cd0F27300dB4aB94BeE3A233AEB19']\n",
     "\n",
     "]\n",
     "\n",
     "for ad in addresses:\n",
     "    title = ad[0]\n",
     "    addr = ad[1]\n",
-    "    print(addr)\n",
     "    bal = w.alchemy_get_eth_balance_by_block(l1_endpoint, block_number, addr)\n",
     "    print(title + ': ' + addr + ': ' + str(bal) + ' ETH')"
    ]
