--- a/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
+++ b/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9104321f",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ffefb42a",
    "metadata": {},
    "outputs": [],
@@ -45,10 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1015ba20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/michaelsilberling/Documents/GitHub/op-analytics/op_rewards_tracking\n"
+     ]
+    }
+   ],
    "source": [
     "pwd = os.getcwd()\n",
     "# Verify that our path is right\n",
@@ -81,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "94d6ed51",
    "metadata": {},
    "outputs": [],
@@ -149,10 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "20a35549",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "table at: dune_upload.op_rewards_tvl_flow_protocols_input\n",
+      "Response status code: 500\n",
+      "Response content: b'{\"error\":\"An internal error occured\"}'\n"
+     ]
+    }
+   ],
    "source": [
     "# Write Protocols to Dune\n",
     "du.write_dune_api_from_pandas(\n",
@@ -164,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "177ccca5",
    "metadata": {},
    "outputs": [],
@@ -186,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cff9db78",
    "metadata": {},
    "outputs": [],
@@ -197,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d3399236",
    "metadata": {},
    "outputs": [],
@@ -253,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b74f70ef",
    "metadata": {},
    "outputs": [],
@@ -263,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2d797655",
    "metadata": {},
    "outputs": [],
@@ -283,10 +301,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8904e656",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "include_in_summary                                                           1\n",
+      "slug                                                                 layer2dao\n",
+      "num_op_override                                                            NaN\n",
+      "num_op                                                                     NaN\n",
+      "start_date                                                 2022-07-20 00:00:00\n",
+      "end_date                                                   2022-08-22 00:00:00\n",
+      "name                                                       L2DAO/OP: Velodrome\n",
+      "op_source                                                 Governance - Phase 0\n",
+      "data_source                                            pool-subgraph-velodrome\n",
+      "contracts                         [0xfc77e39de40e54f820e313039207dc850e4c9e60]\n",
+      "source_slug                                                          velodrome\n",
+      "parent_protocol                                                      Layer2dao\n",
+      "is_external_dex_bridge_pool                                                1.0\n",
+      "app_name                                                             Layer2Dao\n",
+      "protocol                                                             layer2dao\n",
+      "id_format                                                            Layer2dao\n",
+      "program_name                                   Layer2Dao - L2DAO/OP: Velodrome\n",
+      "top_level_name                                             L2DAO/OP: Velodrome\n",
+      "og_app_name                                                          Layer2Dao\n",
+      "og_protocol                                                          layer2dao\n",
+      "og_top_level_name                                          L2DAO/OP: Velodrome\n",
+      "df_source                                                            velodrome\n",
+      "og_include_in_summary                                                        1\n",
+      "og_is_external_dex_bridge_pool                                             1.0\n",
+      "og_parent_protocol                                                   Layer2dao\n",
+      "Name: 14, dtype: object\n"
+     ]
+    },
+    {
+     "ename": "GraphQLError",
+     "evalue": "[{'message': 'deployment `messari/velodrome-finance-optimism` does not exist'}]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mGraphQLError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 23\u001b[0m\n\u001b[1;32m     20\u001b[0m     sdf \u001b[39m=\u001b[39m subg\u001b[39m.\u001b[39mget_curve_pool_tvl(c\u001b[39m.\u001b[39mlower(), min_ts\u001b[39m=\u001b[39mmin_tsmp)\n\u001b[1;32m     21\u001b[0m \u001b[39melif\u001b[39;00m df_source \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mvelodrome\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m     22\u001b[0m     \u001b[39m# print(df_source)\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m     sdf \u001b[39m=\u001b[39m subg\u001b[39m.\u001b[39;49mget_velodrome_pool_tvl(c\u001b[39m.\u001b[39;49mlower(), min_ts\u001b[39m=\u001b[39;49mmin_tsmp)\n\u001b[1;32m     24\u001b[0m \u001b[39melif\u001b[39;00m df_source \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhop\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m     25\u001b[0m     \u001b[39m# print(df_source)\u001b[39;00m\n\u001b[1;32m     26\u001b[0m     sdf \u001b[39m=\u001b[39m subg\u001b[39m.\u001b[39mget_hop_pool_tvl(c, min_ts\u001b[39m=\u001b[39mmin_tsmp)\n",
+      "File \u001b[0;32m~/Documents/GitHub/op-analytics/op_rewards_tracking/../helper_functions/subgraph_utils.py:29\u001b[0m, in \u001b[0;36mget_velodrome_pool_tvl\u001b[0;34m(pid, min_ts, max_ts)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_velodrome_pool_tvl\u001b[39m(pid, min_ts \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m, max_ts \u001b[39m=\u001b[39m \u001b[39m99999999999999\u001b[39m):\n\u001b[1;32m     28\u001b[0m         sg \u001b[39m=\u001b[39m Subgrounds()\n\u001b[0;32m---> 29\u001b[0m         velo \u001b[39m=\u001b[39m create_sg(\u001b[39m'\u001b[39;49m\u001b[39mhttps://api.thegraph.com/subgraphs/name/messari/velodrome-finance-optimism\u001b[39;49m\u001b[39m'\u001b[39;49m, sg)\n\u001b[1;32m     30\u001b[0m         q1 \u001b[39m=\u001b[39m velo\u001b[39m.\u001b[39mQuery\u001b[39m.\u001b[39mliquidityPoolDailySnapshots(\n\u001b[1;32m     31\u001b[0m         orderDirection\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mdesc\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m     32\u001b[0m         first\u001b[39m=\u001b[39mmax_ts\u001b[39m*\u001b[39mmax_ts, \u001b[39m#arbitrarily large number so we pull everything\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     37\u001b[0m                 ]\n\u001b[1;32m     38\u001b[0m         )\n\u001b[1;32m     39\u001b[0m         velo_tvl \u001b[39m=\u001b[39m sg\u001b[39m.\u001b[39mquery_df([\n\u001b[1;32m     40\u001b[0m                 q1\u001b[39m.\u001b[39mid,\n\u001b[1;32m     41\u001b[0m                 q1\u001b[39m.\u001b[39mpool\u001b[39m.\u001b[39mid,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     47\u001b[0m                 ]\n\u001b[1;32m     48\u001b[0m                 , pagination_strategy\u001b[39m=\u001b[39mShallowStrategy)\n",
+      "File \u001b[0;32m~/Documents/GitHub/op-analytics/op_rewards_tracking/../helper_functions/subgraph_utils.py:23\u001b[0m, in \u001b[0;36mcreate_sg\u001b[0;34m(tg_api, sg)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcreate_sg\u001b[39m(tg_api, sg):\n\u001b[0;32m---> 23\u001b[0m         csg \u001b[39m=\u001b[39m sg\u001b[39m.\u001b[39;49mload_subgraph(tg_api)\n\u001b[1;32m     24\u001b[0m         \u001b[39mreturn\u001b[39;00m csg\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/new-env/lib/python3.10/site-packages/subgrounds/subgrounds.py:113\u001b[0m, in \u001b[0;36mSubgrounds.load_subgraph\u001b[0;34m(self, url, save_schema, cache_dir)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload_subgraph\u001b[39m(\n\u001b[1;32m     96\u001b[0m     \u001b[39mself\u001b[39m, url: \u001b[39mstr\u001b[39m, save_schema: \u001b[39mbool\u001b[39m \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m, cache_dir: \u001b[39mstr\u001b[39m \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mschemas/\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     97\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Subgraph:\n\u001b[1;32m     98\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Performs introspection on the provided GraphQL API ``url`` to get the\u001b[39;00m\n\u001b[1;32m     99\u001b[0m \u001b[39m    schema, stores the schema if ``save_schema`` is ``True`` and returns a\u001b[39;00m\n\u001b[1;32m    100\u001b[0m \u001b[39m    generated class representing the subgraph with all its entities.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[39m      Subgraph: A generated class representing the subgraph and its entities\u001b[39;00m\n\u001b[1;32m    111\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 113\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mload(url, save_schema, cache_dir, \u001b[39mTrue\u001b[39;49;00m)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/new-env/lib/python3.10/site-packages/subgrounds/subgrounds.py:84\u001b[0m, in \u001b[0;36mSubgrounds.load\u001b[0;34m(self, url, save_schema, cache_dir, is_subgraph)\u001b[0m\n\u001b[1;32m     81\u001b[0m         store_schema(schema, schema_path)\n\u001b[1;32m     83\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 84\u001b[0m     schema \u001b[39m=\u001b[39m client\u001b[39m.\u001b[39;49mget_schema(url, headers\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mheaders)\n\u001b[1;32m     86\u001b[0m subgraph \u001b[39m=\u001b[39m Subgraph(\n\u001b[1;32m     87\u001b[0m     url,\n\u001b[1;32m     88\u001b[0m     SchemaMeta(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mschema[\u001b[39m\"\u001b[39m\u001b[39m__schema\u001b[39m\u001b[39m\"\u001b[39m]),\n\u001b[1;32m     89\u001b[0m     DEFAULT_SUBGRAPH_TRANSFORMS,\n\u001b[1;32m     90\u001b[0m     is_subgraph,\n\u001b[1;32m     91\u001b[0m )\n\u001b[1;32m     92\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msubgraphs[url] \u001b[39m=\u001b[39m subgraph\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/new-env/lib/python3.10/site-packages/subgrounds/client.py:143\u001b[0m, in \u001b[0;36mget_schema\u001b[0;34m(url, headers)\u001b[0m\n\u001b[1;32m    136\u001b[0m     \u001b[39mraise\u001b[39;00m ServerError(\n\u001b[1;32m    137\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mServer (\u001b[39m\u001b[39m{\u001b[39;00murl\u001b[39m}\u001b[39;00m\u001b[39m) did not respond with proper JSON\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    138\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mDid you query a proper GraphQL endpoint?\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    139\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m{\u001b[39;00mresp\u001b[39m.\u001b[39mcontent\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m    140\u001b[0m     )\n\u001b[1;32m    142\u001b[0m \u001b[39mif\u001b[39;00m (data \u001b[39m:=\u001b[39m raw_data\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m\"\u001b[39m)) \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 143\u001b[0m     \u001b[39mraise\u001b[39;00m GraphQLError(raw_data\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39merrors\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mUnknown Error(s) Found\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m    145\u001b[0m \u001b[39mreturn\u001b[39;00m data\n",
+      "\u001b[0;31mGraphQLError\u001b[0m: [{'message': 'deployment `messari/velodrome-finance-optimism` does not exist'}]"
+     ]
+    }
+   ],
    "source": [
     "# display(df_dfl)\n",
     "dfs_sub = []\n",
@@ -1417,7 +1484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
