--- a/contracts_tracking/successful_deployers_to_devrel.ipynb
+++ b/contracts_tracking/successful_deployers_to_devrel.ipynb
@@ -25,7 +25,8 @@
     "\n",
     "excl_projects = [\n",
     "    'Op',\n",
-    "    'Optimism Governor'\n",
+    "    'Optimism Governor',\n",
+    "    'OP AttestationStation',\n",
     "]"
    ]
   },
