--- a/contracts_tracking/successful_deployers_to_devrel.ipynb
+++ b/contracts_tracking/successful_deployers_to_devrel.ipynb
@@ -27,6 +27,7 @@
     "    'Op',\n",
     "    'Optimism Governor',\n",
     "    'OP AttestationStation',\n",
+    "    'OP Citizens House'\n",
     "]"
    ]
   },
