--- a/contracts_tracking/test_get_result.ipynb
+++ b/contracts_tracking/test_get_result.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'DuneClient' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n\u001b[1;32m     12\u001b[0m dotenv\u001b[39m.\u001b[39mload_dotenv()\n\u001b[0;32m---> 14\u001b[0m dune \u001b[39m=\u001b[39m DuneClient(os\u001b[39m.\u001b[39menviron[\u001b[39m\"\u001b[39m\u001b[39mDUNE_API_KEY\u001b[39m\u001b[39m\"\u001b[39m])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'DuneClient' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<dune_client.client.DuneClient object at 0x7fdd8a584be0>\n"
      ]
     }
    ],
@@ -40,9 +36,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DuneClient' object has no attribute 'get_latest_result'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m results \u001b[39m=\u001b[39m dune\u001b[39m.\u001b[39;49mget_latest_result(\u001b[39m'\u001b[39m\u001b[39m2457627\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DuneClient' object has no attribute 'get_latest_result'"
+     ]
+    }
+   ],
    "source": [
     "results = dune.get_latest_result('2457627')"
    ]
