--- a/contracts_tracking/project_usage_to_devrel.ipynb
+++ b/contracts_tracking/project_usage_to_devrel.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "at_base_id = os.environ[\"AIRTABLE_DEVREL_BASE_ID\"]\n",
     "\n",
-    "at_table_name = 'OP Deployer Data'\n",
+    "at_table_name = 'OP Project Data'\n",
     "\n",
     "excl_projects = [\n",
     "    '',\n",
@@ -39,14 +39,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_id = 2457627\n",
-    "name = \"Contract Deployments Usage Threshold - Creator List\"\n",
+    "query_id = 2709489 #https://dune.com/queries/2709489\n",
+    "name = \"Project Usage Trends - T28D\"\n",
     "\n",
     "if rerun_query == 0:\n",
-    "    deployers = pd.read_csv('csv_outputs/' + name + '.csv')\n",
+    "    projects = pd.read_csv('csv_outputs/' + name + '.csv')\n",
     "else:\n",
     "    # Dune query: https://dune.com/queries/2457627\n",
-    "    deployers = d.get_dune_data(query_id, name = name)"
+    "    projects = d.get_dune_data(query_id, name = name)"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deployers = deployers[~deployers['Team'].isin(excl_projects)]"
+    "projects = projects[~projects['Team'].isin(excl_projects)]"
    ]
   },
   {
@@ -65,9 +65,9 @@
    "outputs": [],
    "source": [
     "#reformat col names\n",
-    "deployers = p.csv_columns_to_formatted(deployers)\n",
+    "projects = p.csv_columns_to_formatted(projects)\n",
     "\n",
-    "datestr = p.get_datestring_from_datetime(deployers['Date'].iloc[0])\n",
+    "datestr = p.get_datestring_from_datetime(projects['Date'].iloc[0])\n",
     "datestr = datestr.replace('-', '_')\n",
     "\n",
     "p.mkdir_if_not_exists('uploads')\n",
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(deployers.columns)"
+    "print(projects.columns)"
    ]
   },
   {
@@ -95,7 +95,7 @@
     "# Append New Data\n",
     "print('appending new data')\n",
     "# deployers = deployers[deployers['Team'] == 'Cozy Finance'] #Test specific team\n",
-    "a.update_database(at_base_id,at_table_name, deployers)\n",
+    "a.update_database(at_base_id,at_table_name, projects)\n",
     "print('done')"
    ]
   }
