--- a/contracts_tracking/test_get_result.ipynb
+++ b/contracts_tracking/test_get_result.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,18 +18,20 @@
     "import os\n",
     "dotenv.load_dotenv()\n",
     "\n",
+    "import dune_client\n",
     "from dune_client.types import QueryParameter\n",
     "from dune_client.client import DuneClient\n",
     "from dune_client.query import Query\n",
     "\n",
     "dune = DuneClient(os.environ[\"DUNE_API_KEY\"])\n",
     "\n",
+    "print(dune_client.__version__)\n",
     "print(dir(dune))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,13 +41,13 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m results \u001b[39m=\u001b[39m dune\u001b[39m.\u001b[39;49mget_latest_result(\u001b[39m'\u001b[39m\u001b[39m2457627\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m results \u001b[39m=\u001b[39m dune\u001b[39m.\u001b[39;49mget_latest_result(\u001b[39m'\u001b[39m\u001b[39m2457627\u001b[39m\u001b[39m'\u001b[39m)\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'DuneClient' object has no attribute 'get_latest_result'"
      ]
     }
    ],
    "source": [
-    "results = dune.get_result('2457627')"
+    "results = dune.get_latest_result('2457627')"
    ]
   }
  ],
