--- a/contracts_tracking/test_get_result.ipynb
+++ b/contracts_tracking/test_get_result.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['API_PATH', 'BASE_URL', 'DEFAULT_TIMEOUT', '__abstractmethods__', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__slots__', '__str__', '__subclasshook__', '__weakref__', '_abc_impl', '_get', '_handle_response', '_post', '_route_url', 'cancel_execution', 'default_headers', 'execute', 'get_result', 'get_status', 'logger', 'refresh', 'token']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dotenv\n",
     "import os\n",
@@ -25,27 +17,24 @@
     "\n",
     "dune = DuneClient(os.environ[\"DUNE_API_KEY\"])\n",
     "\n",
-    "print(dune_client.__version__)\n",
-    "print(dir(dune))"
+    "print(dir(dune))\n",
+    "\n",
+    "import pkg_resources\n",
+    "\n",
+    "package_name = \"dune-client\"\n",
+    "\n",
+    "try:\n",
+    "    package_version = pkg_resources.get_distribution(package_name).version\n",
+    "    print(f\"The current version of {package_name} is {package_version}.\")\n",
+    "except pkg_resources.DistributionNotFound:\n",
+    "    print(f\"{package_name} is not installed.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DuneClient' object has no attribute 'get_latest_result'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m results \u001b[39m=\u001b[39m dune\u001b[39m.\u001b[39;49mget_latest_result(\u001b[39m'\u001b[39m\u001b[39m2457627\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DuneClient' object has no attribute 'get_latest_result'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = dune.get_latest_result('2457627')"
    ]
