--- a/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
+++ b/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
@@ -22,7 +22,7 @@
     "at_base_id = os.environ[\"AIRTABLE_DEVREL_BASE_ID\"]\n",
     "\n",
     "columns = ['Name','Alignment','Block Explorer','Announcement Date', 'Mainnet Launch Date','Shutdown Date'\n",
-    "           ,'L1 Standard Bridge Contract', 'L1 NFT Bridge Contract', 'L1 BatchInbox \"to address\"', 'L1 BatchInbox \"from address\"','L1 Output Oracle','L1 Output Oracle \"from address\"']"
+    "           ,'L1 Standard Bridge Contract', 'L1 NFT Bridge Contract', 'BatchInbox \"to address\"', 'BatchInbox \"from address\"','L2 Output Oracle','L2 Output Oracle \"from address\"']"
    ]
   },
   {
